--- a/gb/22/3/7/n13629286.md
+++ b/gb/22/3/7/n13629286.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yvrwxa344/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yvrwxa344/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yvrwxa344/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【秦鹏直播】乌克兰纳粹化？俄遭德大使馆打脸</h2>
-<a href="https://dfu0th2rj4x8t.cloudfront.net/J7tyQzftf"><img width="600" src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yvrwxa344/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d239x61949z6p.cloudfront.net/L6iyQzftk"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>乌克兰纳粹化？德国大使馆打脸；普京“大脑”毁了他？（《秦鹏直播》提供）
 </h6>
 <hr>
 	<p>【大纪元2022年03月08日讯】各位观众朋友们大家好，今天是美东时间3月7日，京港台时间3月8日，我是秦鹏，欢迎收看“秦鹏政经观察”时事天天聊。</p>
-<p>今天焦点：俄罗斯入侵<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>有四大理由？德国大使馆打脸：我们才是“<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E7%BA%B3%E7%B2%B9.md#1">纳粹</a>”的专家！联合国揭顿巴斯真相；俄罗斯“万城之母”是哪里？</p>
-<p>俄罗斯入侵<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>，先后给出了四大理由，声称要对乌克兰实施去军事化，去<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E7%BA%B3%E7%B2%B9.md#1">纳粹</a>化。不过，现在看无一成立。德国大使馆甚至直接公开开涮俄方：我们才是“纳粹”的专家！</p>
-<p>俄入侵的真实原因，是<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E6%99%AE%E4%BA%AC.md#1">普京</a>版本的“伟大民族复兴”？近日，“普京的大脑”，俄罗斯专家杜金浮出水面。正是他提出了新欧亚主义、乌克兰不存在等观点。但是清华大学孙立平教授的两篇文章，直接揭穿其理论是足以让俄罗斯这个破败的大富豪被毁掉的“雄才大略”。</p>
-<div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://dfu0th2rj4x8t.cloudfront.net/J7tyQzftf"><img width="600" src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yvrwxa344/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/NTyKhsnj1cI?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
+<p>今天焦点：俄罗斯入侵<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>有四大理由？德国大使馆打脸：我们才是“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BA%B3%E7%B2%B9.md#1">纳粹</a>”的专家！联合国揭顿巴斯真相；俄罗斯“万城之母”是哪里？</p>
+<p>俄罗斯入侵<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>，先后给出了四大理由，声称要对乌克兰实施去军事化，去<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BA%B3%E7%B2%B9.md#1">纳粹</a>化。不过，现在看无一成立。德国大使馆甚至直接公开开涮俄方：我们才是“纳粹”的专家！</p>
+<p>俄入侵的真实原因，是<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%99%AE%E4%BA%AC.md#1">普京</a>版本的“伟大民族复兴”？近日，“普京的大脑”，俄罗斯专家杜金浮出水面。正是他提出了新欧亚主义、乌克兰不存在等观点。但是清华大学孙立平教授的两篇文章，直接揭穿其理论是足以让俄罗斯这个破败的大富豪被毁掉的“雄才大略”。</p>
+<div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://d239x61949z6p.cloudfront.net/L6iyQzftk"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/NTyKhsnj1cI?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
 	</div></center></center></p>
 <h2>入侵要去“纳粹化”？德大使馆：我们才是“纳粹”的专家！</h2>
 <p>乌克兰纳粹化？</p>
-<p><ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E6%99%AE%E4%BA%AC.md#1">普京</a>声称，入侵俄罗斯，是为了使乌克兰彻底“去纳粹化”。日前，俄国驻南非大使馆也配合做“大外宣”，指称俄军出兵乌国是打击纳粹分子。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%99%AE%E4%BA%AC.md#1">普京</a>声称，入侵俄罗斯，是为了使乌克兰彻底“去纳粹化”。日前，俄国驻南非大使馆也配合做“大外宣”，指称俄军出兵乌国是打击纳粹分子。</p>
 <p>3月5日，俄国驻南非大使馆在推特发文，称它们收到大量南非人的声援，包括组织和个人的，该文称“我们感谢你的支持，也很高兴各位今天决定和我们站在一起，就像80年前一样，俄国正在乌克兰‘打击纳粹主义者’”！</p>
 <p>没想到，德国驻南非大使馆当天回应这则推文，完全不给面子、直接打脸，“抱歉，但我们不能对此保持沉默，这实在太过偏激了”，还说：“俄国在乌克兰的所作所为，只是为了自身利益而屠杀无辜孩童、妇女和男子。”</p>
 <p>德国大使馆强调，“这绝对不是在‘打击纳粹主义’”。任何相信这种说法的人应该感到羞耻。而且它说：“很遗憾，我们算是纳粹主义方面的专家。”</p>
@@ -75,50 +75,50 @@
 <p>2019年，俄罗斯的科技研发投入强度只有1.1%，排名世界第34位，低于以色列的4.25%、韩国的4.24%、瑞士的3.37%和瑞典的3.25%。同年，俄科研人员人均研发投入只有9.3万美元，位列全球第47位。排名第一的瑞士为40.67万美元，其次是美国和中国。</p>
 <p>在科技研发的投资主体方面，2019年俄66.3%的研发投入来自国家，企业研发投入占比仅为30.2%。在研发投入前10位的国家中，俄的国家参与规模与印度相当。</p>
 <p>所以，俄罗斯的衰落，乌克兰的这场战争，固然有很多外部因素，但是作为俄罗斯自身，真的不需要检讨自身吗？</p>
-<p>订阅YouTube：<ahref=""></a><a href="https://dfu0th2rj4x8t.cloudfront.net/J7tyQzftf"><img width="600" src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yvrwxa344/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCwX6rw_QzJbFzvr1CzivxIg">"></a><a href="https://dfu0th2rj4x8t.cloudfront.net/J7tyQzftf"><img width="600" src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yvrwxa344/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCwX6rw_QzJbFzvr1CzivxIg</a><br />
-订阅 Youmaker 优美客频道：<ahref=""></a><a href="https://dfu0th2rj4x8t.cloudfront.net/J7tyQzftf"><img width="600" src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yvrwxa344/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/QingPeng">"></a><a href="https://dfu0th2rj4x8t.cloudfront.net/J7tyQzftf"><img width="600" src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yvrwxa344/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/QingPeng</a></p>
-<p>《<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E7%A7%A6%E9%B9%8F%E7%9B%B4%E6%92%AD.md#1">秦鹏直播</a>》制作组</p>
+<p>订阅YouTube：<ahref=""></a><a href="https://d239x61949z6p.cloudfront.net/L6iyQzftk"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCwX6rw_QzJbFzvr1CzivxIg">"></a><a href="https://d239x61949z6p.cloudfront.net/L6iyQzftk"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCwX6rw_QzJbFzvr1CzivxIg</a><br />
+订阅 Youmaker 优美客频道：<ahref=""></a><a href="https://d239x61949z6p.cloudfront.net/L6iyQzftk"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/QingPeng">"></a><a href="https://d239x61949z6p.cloudfront.net/L6iyQzftk"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/QingPeng</a></p>
+<p>《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A7%A6%E9%B9%8F%E7%9B%B4%E6%92%AD.md#1">秦鹏直播</a>》制作组</p>
 <p>责任编辑：李昊#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/1/n13614791.md#1">【秦鹏直播】普京甩锅习近平 王毅慌忙救驾？</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/2/n13617338.md#1">【秦鹏直播】俄乌战事未平 俄战机进入瑞典日本</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/3/n13620333.md#1">【秦鹏直播】中共否认求俄冬奥后开战 难掩尴尬</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/4/n13622963.md#1">【秦鹏直播】邓飞实名举报 质疑铁链女婚姻非法</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/1/n13614791.md#1">【秦鹏直播】普京甩锅习近平 王毅慌忙救驾？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/2/n13617338.md#1">【秦鹏直播】俄乌战事未平 俄战机进入瑞典日本</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/3/n13620333.md#1">【秦鹏直播】中共否认求俄冬奥后开战 难掩尴尬</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/4/n13622963.md#1">【秦鹏直播】邓飞实名举报 质疑铁链女婚姻非法</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/7/n10620856.md#1" target="_blank">历经磨难的学者——吴门三大右派</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/18/n3685199.md#1" target="_blank">难以置信的事实</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10004659.md#1" target="_blank">共产暴政录：批判武训，拒绝特蕾莎修女</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/6/n11368594.md#1" target="_blank">二度死里逃生 前大陆白领熬过酷刑迎来自由</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/21/n13594785.md#1">【未解之谜】拿地球人做实验？外星人意欲何为？</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13625395.md#1">日本寺庙有300年前人鱼木乃伊 长30公分</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/25/n13605650.md#1">沈纯良娶盲妻 源于前世一笑一怒之报</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/26/n13607219.md#1">最是美丽的季节  错过了惊蛰将错过什么呢？</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/5/n13624465.md#1">【新闻看点】铁链女案仍发酵 人贩真名住址曝光</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13626750.md#1">【神韵作品】2019 神韵交响乐《扇子舞》</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/7/n13627991.md#1">吴明德：俄罗斯只剩一条路 中共更孤立</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13622771.md#1">伊能静庆53岁生日 与5岁女儿合照宛如姐妹</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/5/n13623663.md#1">FDA首次公开辉瑞疫苗数据 副作用1,291种</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/5/n13624705.md#1">应对俄飞机坦克 美援乌武器清单曝光</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13622771.md#1">伊能静庆53岁生日 与5岁女儿合照宛如姐妹</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13622910.md#1">郑欣宜居家避疫仍化妆 靠生酮饮食减重20磅</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/5/n13623650.md#1">CUBE娱乐与徐穗珍解约 公布霸凌案调查结果</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13626756.md#1">逾10位港星改名都各有原因 李佳芯为身体健康</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13626613.md#1">高圆圆自认表演天赋不够 曾抗拒别人谈她的容貌</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/26/n13606756.md#1">吃蔬菜能增肌！专家：比肉类对肌肉更好</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13622027.md#1">西兰花让动脉变柔软！六大蔬菜保护心脏</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/5/n13624142.md#1">【健康1+1】比尔盖茨：下场流行将至 疫苗过时？</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13625094.md#1">当季水果鲜甜营养 吃对了就不容易生病</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/5/n13624381.md#1">茄子可防动脉硬化 烹煮3个技巧避免变色</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yvrwxa344/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yvrwxa344/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/7/n13629286.htm">【秦鹏直播】乌克兰纳粹化？俄遭德大使馆打脸</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/7/n13629286.htm">【秦鹏直播】乌克兰纳粹化？俄遭德大使馆打脸</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yvrwxa344/djy/blob/master/gb/22/3/7/n13629286.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yvrwxa344/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yvrwxa344/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yvrwxa344/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/22/3/7/n13629286.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
